Pred korekurou zlomu

--- a/main.tex
+++ b/main.tex
@@ -16,8 +16,8 @@
 \usepackage[backgroundcolor=Apricot]{todonotes}
 \usepackage{hyperref}
 \usepackage{csquotes}
-\usepackage{tablefootnote}
-
+%\usepackage{tablefootnote}
+\usepackage{threeparttable}
 
 %\usepackage{hyphenat}
 %\hyphenation{v\'{y}-cho-do-asij-sk\'{y}-mi, ne-pro-v\v{e}-\v{r}e-nos-ti}
@@ -54,9 +54,10 @@
 %\subfile{prispevky/120-Trasovani/main.tex}
 %\subfile{prispevky/130-Compliance/main.tex}
 %\end{document}
+%\title{Rok s pandemií covid-19 -- reflexe v poločase\footnote{Verze s typograficky upravenými kapitolami - zbývají špatně zalomené řádky v bibliografii. Kapitoly z této verze budou zaslány autorům k finální autorizaci. Rovněž je třeba upravit přetéjkající tabulky \ref{tab:states} a \ref{paramtab} }}
 
 
-\title{Rok s pandemií covid-19 -- reflexe v poločase\footnote{verze s očištěnou a opravenou bibliografií}}
+\title{Rok s pandemií covid-19 -- reflexe v poločase\footnote{Verze s typograficky upravenými kapitolami - zbývají špatně zalomené řádky v bibliografii. Kapitoly z této verze budou zaslány autorům k finální autorizaci.}}
 \author{Bisop}
 \maketitle
 
