--- a/monografie-final.bib
+++ b/monografie-final.bib
@@ -29,7 +29,7 @@
 	booktitle = {Virological.org},
 	date-modified = {2021-05-30 21:47:50 +0200},
 	title = {{Novel 2019 Coronavirus Genome}},
-	url = {https://virological.org/t/novel-2019-coronavirus-genome/319},
+	url = {\url{https://virological.org/t/novel-2019-coronavirus-genome/319}},
 	year = {2020},
 	Bdsk-Url-1 = {https://virological.org/t/novel-2019-coronavirus-genome/319}}
 
@@ -1081,7 +1081,7 @@ eprint = {https://doi.org/10.2105/AJPH.2020.305770}
 
 @article{Longini_etal2007,
 	title={Containing a large bioterrorist smallpox attack: a computer simulation approach},
-	author={Ira M Longini~Jr and M Elizabeth Halloran and Azhar Nizam and Yang Yang and Shufu Xu and Donald S Burke and Derek A T Cummings and Joshua M Epstein},
+	author={I. M. Longini and M. E. Halloran and A. Nizam and Y. Yang and S. Xu and D. S. Burke and D. A. T. Cummings and J. M. Epstein},
 	journal={International Journal of Infectious Diseases},
 	year={2007},
 	volume=11,
@@ -1151,7 +1151,7 @@ eprint = {https://doi.org/10.2105/AJPH.2020.305770}
 
 @article{Smith_etal2012,
 	title={Ross, {M}acdonald, and a Theory for the Dynamics and Control of Mosquito-Transmitted Pathogens},
-	author={David L. Smith and Katherine E. Battle and Simon I. Hay and Christopher M. Barker and Thomas W. Scott and F. Ellis McKenzie},
+	author={D. L. Smith and K. E. Battle and S. I. Hay and C. M. Barker and T. W. Scott and F. E. McKenzie},
 	journal={PLoS Pathogens},
 	year={2012},
 	volume=8,
@@ -1161,7 +1161,7 @@ eprint = {https://doi.org/10.2105/AJPH.2020.305770}
 
 @article{Smith_etal2018,
 	title={Agent-based models of malaria transmission: a systematic review},
-	author={Neal R. Smith and James M. Trauer and Manoj Gambhir and Jack S. Richards and Richard J. Maude and Jonathan M. Keith and Jennifer A. Flegg},
+	author={N. R. Smith and J. M. Trauer and M. Gambhir and J. S. Richards and R. J. Maude and J. M. Keith and J. A. Flegg},
 	journal={Malaria Journal},
 	year={2018},
 	volume=17,
@@ -1179,7 +1179,7 @@ eprint = {https://doi.org/10.2105/AJPH.2020.305770}
 @article{YangBrauer2008,
 	title={Calculation of $R_0$ for age-of-infection models},
 	author={C. K. Yang and F. Brauer},
-	journal={Mathematical biosciences and engineering},
+	journal={Mathematical Biosciences and Engineering},
 	year={2008},
 	volume=5,
 	pages="585-599",
@@ -1689,8 +1689,8 @@ note = {Sociologická studie, cit. 13.5.2021}
 
 @article{potter2012estimating,
   title={Estimating within-school contact networks to understand influenza transmission},
-  author={Potter, Gail E and Handcock, Mark S and Longini Jr, Ira M and Halloran, M Elizabeth},
-  journal={The annals of applied statistics},
+  author={G. E. Potter and M. S. Handcock and I. M. Longini and M. E. Halloran},
+  journal={The Annals of Applied Statistics},
   volume={6},
   number={1},
   pages={1},
@@ -1943,7 +1943,7 @@ note = {Sociologická studie, cit. 13.5.2021}
 
 @article{Shapiro_etal2021,
   title={Efficacy Estimates for Various {COVID}-19 Vaccines: What we Know from the Literature and Reports},
-  author={Julia Shapiro and Natalie E. Dean and Zachary J. Madewell and Yang Yang and M. Elizabeth Halloran and Ira Longini},
+  author={J. Shapiro and N. E. Dean and Z. J. Madewell and Y. Yang and M. E. Halloran and I. Longini},
   journal={medRxiv},
   year={2021},
   publisher={Cold Spring Harbor Laboratory Press},
@@ -3273,7 +3273,7 @@ year = {2018}
 
 
 @article{MFCR2021,
-  title={Makroekonomick{\'a} predikce},
+  title={Makroekonomická predikce},
   author={MFČR},
   year={2021},
   url = {https://www.mfcr.cz/cs/verejny-sektor/makroekonomika/makroekonomicka-predikce/2021/makroekonomicka-predikce-duben-2021-41494}
@@ -3315,7 +3315,7 @@ year = {2018}
 
 
 @article{Jann2021,
-  title={V{\`y}luka prezen{\v{c}}n{\'\i} v{\`y}uky b{\v{e}}hem pandemie covid-19: odhad neviditeln{\`y}ch ekonomick{\`y}ch ztr{\'a}t},
+  title={Výluka prezenční výuky během pandemie covid-19: odhad neviditelných ekonomických ztrát},
   author={Jann, Ole and M{\"u}nich, Daniel and Zapletalov{\'a}, Lucie},
   series = {IDEA Working Paper},
   year = {2021}
