--- a/prispevky/030-Co_na_cem_zavisi/main.tex
+++ b/prispevky/030-Co_na_cem_zavisi/main.tex
@@ -36,7 +36,7 @@ snažících se dokázat druhou možnost. Za jejich vlajkovou lze považovat \ci
 (pro diskusi o~této práci viz \cite{kluveitIoan}), z~domácích autorů
 se v~tomto proudu angažují například \cite{hradsky2021demographic}. 
 
-Možná to mnohé překvapí, ale otázka kauzality je filozofická a věda na ni nikdy nedokáže definitivně odpovědět. Vždy jeTady skutečné hospitalizace ve světě. Obrovskej nárůst v USA si vysvětluju malou proočkovaností. https://ourworldindata.org/grapher/weekly-hospital-admissions-covid
+Možná to mnohé překvapí, ale otázka kauzality je filozofická a věda na ni nikdy nedokáže definitivně odpovědět. Vždy je
 v~principu možné, že vše, co zažíváme, je jen jakási sofistikovaná
 virtuální realita, ve které všechno včetně výsledků vědeckých experimentů
 někdo dopředu naprogramoval. Nakonec je vždy na člověku, zda argumenty
@@ -86,7 +86,7 @@ daného opatření by měla být statisticky prokázána).}
 \end{figure}
 Základní statistická analýza přesvědčivě ukazuje souvislost redukce kontaktů s~nárůstem epidemie. Na levém grafu obrázku \ref{fig:souvislosti} jsou vykresleny týdenní relativní přírůstky nových
 případů oproti koeficientu redukce
-kontaktů, měřenému longitudinálním sociologickým výzumem \cite{paqcovid} dva týdny předem. 
+kontaktů, měřenému longitudinálním sociologickým výzumem \cite{paqcovid} dva tý\-dny pře\-dem. 
 Koeficient redukce nabývá hodnoty jedna v~případě,
 že je množství kontaktů shodné s~dobou těsně před pandemií, a byl
 by hypoteticky nulový, pokud by lidé neměli žádné rizikové kontakty.
@@ -138,10 +138,10 @@ se účinnosti protiepidemických opatření.
 nejdříve mít rizikové kontakty, pak onemocnět).}\\
 Vzhledem k~současným pokročilým metodám sběru dat a jejich ukládání
 jsou, zejména ve vyspělejších státech, k~dispozici poměrně přesné
-časové údaje o~vývoji počtu hlášených případů, což dovoluje i zkoumání časovosti.
-V~případě týdenních dat z~České republiky nejlepší shodu, měřenou
+časové údaje o~vý\-vo\-ji počtu hlášených případů, což dovoluje i zkoumání časovosti.
+V~případě tý\-den\-ních dat z~České republiky nejlepší shodu, měřenou
 korelačním koeficientem, dává dvoutýdenní až třítýdenní zpoždění mezi měřením
-kontaktů a hlášením přírůstku, viz obrázek \ref{fig:korelace}.
+kontaktů a hlášením pří\-růst\-ku, viz obrázek \ref{fig:korelace}.
 \begin{figure}
 \begin{center}
 \includegraphics[width=8cm]{pic/lagsel.eps}
@@ -168,21 +168,21 @@ je často podporuje. Změna nakažlivosti, zmiňovaná u~druhého kritéria, nap
 \item \emph{Experiment: Je vhodné (pokud je to možné), aby byl daný vztah
 prokázán experimentální evidencí.}\\
 Je jasné, že laboratorní experimenty pro potvrzení účinnosti protiepidemických
-opatření nelze z~etických důvodů pořádat. Někdy se takový experiment „podaří" uspořádat v zemi, kde jsou vyžadovány nižší etické standardy \cite{abaluck2021impact}, může se však vyskytnout i příležitost s etikou nekolidující:
+opatření nelze z~etických důvodů pořádat. Někdy se takový experiment „po\-da\-ří" uspo\-řá\-dat v zemi, kde jsou vyžadovány nižší etické standardy \cite{abaluck2021impact}, může se však vyskytnout i příležitost s etikou nekolidující:
 takzvaný přirozený experiment -- jeden z~těchto případů, mimo jiné potvrzujících
 roli rizikových kontaktů v~šíření SARS-CoV-2, je popsán v~kapitole
 \ref{Prirozene_experimenty}.
 \item \emph{Analogie: Někteří autoři považují za vhodné, pokud jsou 
-uvedeny přesvědčivé analogie či podobnost s~jinými jevy}\\
+uvedeny přesvědčivé analogie či podobnost s~jinými jevy.}\\
 Zdá se více než pravděpodobné, že relativně lepší zvládnutí pandemie
-východoasijskými státy souvisí s~jejich poměrně čerstvou zkušeností
+vý\-cho\-do\-asij\-ský\-mi státy souvisí s~jejich poměrně čerstvou zkušeností
 s~nákazou SARS, zatímco v~Evropě a USA byla poslední 
 výzvou podobného rozsahu pandemie španělské chřipky před sto lety. Je velmi těžké odhadnout,
 jak by byla pandemie celosvětově zvládnuta, nebýt těchto čerstvých
 asijských zkušeností.
 \item \emph{Reverzibilita: Pokud příčina zmizí, zmizí efekt.}\\
 Podobně jako v~případě experimentů potvrzení kauzality tímto způsobem
-naráží na etické limity, například zrušení protiepidemických opatření z~experimentálních
+na\-rá\-ží na etické limity, například zrušení protiepidemických opatření z~ex\-pe\-ri\-men\-tál\-ních
 důvodů není z~etických důvodů možné. Během více než roku trvání pandemie tato situace
 ve světě přesto několikrát nastala, většinou z~důvodů neochoty politické
 reprezentace k~zavedení protiepidemických opatření. Ikonický je
@@ -211,6 +211,6 @@ názory zakotven ve vědeckém uvažování a jak nesrovnatelně lépe je
 odůvodněn. Naopak, pokud například \cite{wood2021inferring} naznačuje, že fatální infekce
 začaly klesat ještě před zavedením britského lockdownu, je k~této
 myšlence nutno i přes všechnu statistickou sofistikovanot práce přistupovat
-s~krajní obezřetností, protože tvrzení, implicitně z~této domněnky
+s~krajní o\-be\-zřet\-nos\-tí, protože tvrzení, implicitně z~této domněnky
 vyplývající, totiž že epidemie se v~raných fázích svou vnitřní dynamikou
 sama utlumí, nemá kromě uvedené statistické evidence (tedy první podmínky) podporu v~žádném dalším bodu Hillova seznamu. Podobně pokud \cite{KomarekStraka2021} tvrdí, že většina opatření neměla významný vliv na dynamiku epidemie, a dokládají to údajně chybějícími časovými souvislostmi svého odhadu reprodukčního čísla a opatření, přinejmenším dluží vysvětlení, co v~tom případě vliv mělo, včetně pečlivého odůvodnění, třeba pomocí Hillova seznamu, že jde skutečně o~kauzalitu.
