--- a/prispevky/050-Grafy_kontaktu/main.tex
+++ b/prispevky/050-Grafy_kontaktu/main.tex
@@ -6,9 +6,9 @@
 
 \section*{Úvod}
 
-Obvykle užívaný model epidemie SIR (Susceptibles, Infectives, Removed, tedy potenciálně vnímaví, infekční a vyčlenění ze struktury) obsahuje jako vstupní podmínky počty jedinců z~těchto skupin a predikuje přírůstky či úbytky v~každém časovém kroku. Epidemickými parametry jsou přitom hodnoty jako například míra infekčnosti, míra uzdravení atd., které určují intenzitu, se kterou dochází k~přechodům mezi stavy. Chování jednotlivců je u~tohoto modelu zahrnuto právě do intenzit těchto přechodů. Matematickým modelům epidemie se věnuje kapitola \ref{Typy_modelu}. Chceme-li modelovat šíření epidemie na úrovni jednotlivých kontaktů individuálně definovaných jedinců, je třeba vytvořit strukturu obsahující všechny jednotlivce a jejich vzájemné vazby. Tuto strukturu nazýváme graf kontaktů. V~grafu jsou jednotlivci reprezentováni jako uzly s~definovanými vlastnostmi, jejich kontakty pak představují hrany. Mezi významné atributy hran patří intenzita (počet kontaktů v~čase) a pravděpodobnost přenosu nákazy při konkrétním setkání. 
+Obvykle užívaný model epidemie SIR (Susceptibles, Infectives, Removed, tedy potenciálně vnímaví, infekční a vyčlenění ze struktury) obsahuje jako vstupní podmínky počty jedinců z~těchto skupin a predikuje přírůstky či úbytky v~každém časovém kroku. Epidemickými parametry jsou přitom hodnoty jako například míra infekčnosti, míra uzdravení atd., které určují intenzitu, se kterou dochází k~přechodům mezi stavy. Chování jednotlivců je u~tohoto modelu zahrnuto právě do intenzit těchto přechodů. Matematickým modelům epidemie se věnuje kapitola \ref{Typy_modelu}. Chceme-li modelovat šíření epidemie na úrovni jednotlivých kontaktů individuálně definovaných jedinců, je třeba vytvořit strukturu obsahující všechny jednotlivce a jejich vzájemné vazby. Tuto strukturu nazýváme graf kontaktů. V~grafu jsou jednotlivci reprezentováni jako uzly s~definovanými vlastnostmi, jejich kontakty pak představují hrany. Mezi významné atributy hran patří intenzita (počet kontaktů v~čase) a pra\-dě\-po\-dob\-nost přenosu nákazy při konkrétním setkání. 
 
-Graf kontaktů získáváme vlastním generátorem, vytvořeným pro softwarový nástroj EPICITY, což je program umožňující testovat vliv protiepidemických opatření v~rámci regionu. Rigorozně je náš postup popsán v publikaci \cite{M-techrep2021}.
+Graf kontaktů získáváme vlastním generátorem, vytvořeným pro softwarový ná\-stroj EPICITY, což je program umožňující testovat vliv protiepidemických opatření v~rám\-ci regionu. Rigorozně je náš postup popsán v publikaci \cite{M-techrep2021}.
 
 Výhodou použití grafu diskretizovaného na úroveň jednotlivců je proti SIR modelu především možnost modelovat průběh epidemie s~vysokou granularitou. Je možné sledovat rychlost šíření nákazy dle nejrůznějších kritérií, například z~hlediska geografie, podle věkových kohort, ekonomických aktivit atd.  Jiným možným příkladem je simulace výskytu superpřenašeče v~nějakém místě či v~určité komunitě, jehož simulace v~SIR modelu není možná.
 Graf kontaktů může být navržen jako vícevrstvá struktura, ve které jednotlivé vrstvy představují specifickou třídu kontaktů. 
@@ -36,7 +36,7 @@ U~každého kontaktu je důležitá jeho intenzita. Obr.\ref{kategorie} ukazuje 
 
 %Hodnoty vah pro množství infekčních osob byly získány Saatyho metodou, dotazníkovým šetřením mezi experty.
 
-Pravděpodobnosti nakažení v~jednotlivých prostředích se přirozeně liší, například při blízkém fyzickém kontaktu v~uzavřené místnosti budou jiště větší než při venkovní sportovní aktivitě. Odhady těchto pravděpodobností jsme získali dotazníkovým šetřením mezi experty, které jsme vyhodnotili Saatyho metodou \cite{M-techrep2021}.
+Pravděpodobnosti nakažení v~jednotlivých prostředích se přirozeně liší, například při blízkém fyzickém kontaktu v~uzavřené místnosti budou jiště větší než při venkovní sportovní aktivitě. Odhady těchto pravděpodobností jsme získali dotazníkovým šet\-ře\-ním mezi experty, které jsme vyhodnotili Saatyho metodou \cite{M-techrep2021}.
 
 \begin{figure}
     \centering
@@ -45,7 +45,7 @@ Pravděpodobnosti nakažení v~jednotlivých prostředích se přirozeně liší
     \label{kategorie}
 \end{figure}
 
-Jak již bylo naznačeno, kontakty rozdělujeme do následujících kategorií: kontakty v~rodině, kontakty ve škole, kontakty na pracovišti a kontakty při volnočasových aktivitách, mezi které patří například návštěvy restaurací nebo návštěvy v~jiných domácnostech, návštěvy divadel atd. Vlastní přístup ke tvorbě grafu kontaktů vyžaduje také doprava či setkávání během nakupování. Způsob tvorby vrstev grafu je podrobně popsán v~\cite{M-techrep2021}, kde jsou vysvětleny postupy vedoucí k~určení jednotlivých parametrů včetně odůvodnění. Dále popíšeme implementaci kontaktů ve vybraných vrstvách grafu kontaktů.
+Jak již bylo naznačeno, kontakty rozdělujeme do následujících kategorií: kontakty v~rodině, kontakty ve škole, kontakty na pracovišti a kontakty při volnočasových aktivitách, mezi které patří například návštěvy restaurací nebo návštěvy v~jiných domácnostech, návštěvy divadel atd. Vlastní přístup ke tvorbě grafu kontaktů vy\-ža\-du\-je také doprava či setkávání během nakupování. Způsob tvorby vrstev grafu je podrobně popsán v~\cite{M-techrep2021}, kde jsou vysvětleny postupy vedoucí k~určení jednotlivých parametrů včetně odůvodnění. Dále popíšeme implementaci kontaktů ve vybraných vrstvách grafu kontaktů.
 
 Jak je uvedeno výše, pro tvorbu \emph{rodinných kontaktů} využíváme anonymizovaných dat ČSÚ, která umožňují modelovat jednotlivě každou domácnost. Předpokládáme, že se každý člen domácnosti setkává se všemi jejími ostatními členy. Dále se potkávají členové různých domácností v~rámci stejného bydliště (domu). Posledním zdrojem kontaktů v~rámci domácností jsou pak mezigenerační návštěvy.
 Každou osobu starší 50 let považujeme za potenciálního rodiče, který bude navštěvovat domácnosti svých dětí. Počet dětí získáváme z~cenzurovaného normálního rozdělení s~průměrem 1,92 a standardní odchylkou 0,7, kteréžto hodnoty odpovídají údajům z~výzkumu \cite{zaj:ess}.
@@ -54,7 +54,7 @@ Domácnost dětí je volena náhodně tak, aby alespoň jeden člen domácnosti 
 
 Při těchto mezigeneračních návštěvách se předpokládá, že daný rodič se při návštěvě svých dětí setkává se všemi členy jejich domácnosti. Podobně také děti navštěvují své rodiče a při té příležitosti se mohou setkat se všemi členy domácnosti rodičů.
 
-Pravděpodobnosti jednotlivých typů kontaktů (v~rámci domácnosti, mezigenerační) jsou během vytváření grafu automaticky optimalizovány tak, aby odpovídaly matici kontaktů pro rodinné prostředí tak, jak je uváděna v~práci \cite{Prem_etal2017}. Kritériem pro optimalizaci je 
+Pravděpodobnosti jednotlivých typů kontaktů (v~rámci domácnosti, me\-zi\-ge\-ne\-rač\-ní) jsou během vytváření grafu automaticky optimalizovány tak, aby odpovídaly matici kontaktů pro rodinné prostředí tak, jak je uváděna v~práci \cite{Prem_etal2017}. Kritériem pro optimalizaci je 
 minimalizování vážené kvadratické vzdálenosti výsledné matice kontaktů a matice kontaktů pro domácnosti z~\cite{Prem_etal2017}.
 
 %Chceme-li respektovat matici kontaktů pro rodinné prostředí tak, jak je uváděna v literatuře \cite{Prem_etal2017}, musíme určit pravděpodobnosti kontaktů u jednotlivých věkových skupin, jak je podrobně rozebráno v \cite{pg:modelM}. Například u seniorů a osob obdobného věku je tato pravděpodobnost nastavena na 1 -- a to v případě, že je dotyčným osobám více než 60 let, anebo je jejich věkový rozdíl menší či roven 10 letům. V ostatních případech je hodnota pravděpodobnosti kontaktu v rodině nastavena na 0,745. V případě domácností, ve kterých žijí dvě rodiny, předpokládáme kontakt se kterýmkoli členem druhé rodiny s pravděpodobností 0,397.
@@ -88,7 +88,7 @@ Přátelské kontakty se dělí na: kontakty ve volném prostoru, návštěvy me
 
 \emph{Přátelské kontakty ve volném prostoru} jsou z~epidemického pohledu nejméně významné, neboť při nich dochází k~šíření epidemie ve velmi malé míře a pouze mezi účastníky schůzky.
 
-Pokud je kontaktu přátelské vrstvy grafu kontaktů přisouzeno \emph{setkání v~domácnosti}, je rozhodnuto, v~čí domácnosti setkání proběhne, a osoba, která na schůzku přichází, se rovněž setká se všemi členy domácnosti navštíveného.
+Pokud je kontaktu přátelské vrstvy grafu kontaktů přisouzeno \emph{setkání v~do\-mác\-nos\-ti}, je rozhodnuto, v~čí domácnosti setkání proběhne, a osoba, která na schůzku přichází, se rovněž setká se všemi členy domácnosti navštíveného.
 
 Pokud je věk obou přátel vyšší osmnácti let, může se jejich setkání realizovat \emph{kontaktem v~restauraci}. Jako místo setkávání je náhodně volena některá z~restaurací, přičemž preferovány jsou restaurace poblíž bydliště vybraného člena dvojice. Ke kontaktu v~restauraci jsou pak přidány i vzájemné kontakty s~ostatními hosty restaurace a kontakty s~personálem.
 
@@ -97,7 +97,7 @@ Pokud je věk obou přátel vyšší osmnácti let, může se jejich setkání r
 
 Při vytváření vrstvy \emph{kontaktů v~obchodech} vycházíme z~databáze obchodů poskytnuté serverem seznam.cz. Obchody klasifikujeme do tří kategorií podle velikosti -- malé obchody, samoobsluhy a super/hypermarkety. Každému obyvateli přiřazujeme jeden obchod jednak na základě preference kategorie, kde vycházíme z~výzkumu \cite{zaj:medianlife}, jednak geograficky -- podle blízkosti k~místu bydliště. V~každém obchodě se mohou vzájemně potkávat všichni nakupující a personál.
 
-Do tvorby grafu jsou zahrnuty rovněž \emph{náhodné kontakty}, tedy takové, jejichž mechanismus vzniku je pro nás neznámý. Každému jednotlivci jsou tímto způsobem vygenerovány tři možné kontakty s~pravděpodobností setkání váženou podle věku. Střední počet těchto kontaktů byl nastaven tak, aby odpovídal sociologickému výzkumu \cite{Prem_etal2017}. Do ostatních kontaktů jsou zařazena rovněž všechna setkání uskutečněna při nejrůznějších společenských aktivitách napříč věkovými kohortami.
+Do tvorby grafu jsou zahrnuty rovněž \emph{náhodné kontakty}, tedy takové, jejichž mechanismus vzniku je pro nás neznámý. Každému jednotlivci jsou tímto způsobem vygenerovány tři možné kontakty s~pravděpodobností setkání váženou podle věku. Střední počet těchto kontaktů byl nastaven tak, aby odpovídal sociologickému výz\-ku\-mu \cite{Prem_etal2017}. Do ostatních kontaktů jsou zařazena rovněž všechna setkání uskutečněna při nejrůznějších společenských aktivitách napříč věkovými kohortami.
 
 Pro správnou funkci modelu je nutné vytvořit \emph{Dopravní síť}. Jednotlivci potřebují cestovat do škol, za prací, za ostatními členy rodiny i na schůzky s~přáteli. Potřeba využít dopravní prostředek vzniká v~závislosti na odlehlosti míst, která jedinec navštěvuje. Pro pohyb může využít jak individuální dopravu, tak dopravu hromadnou s~uvažováním vzájemných kontaktů. 
 
@@ -106,7 +106,7 @@ obr. \ref{dopravnisit}, kde je zobrazena automaticky generovaná síť pro Louns
 
 %Takto vygenerovaná dopravní síť je velmi blízká realitě. 
 
-Pohyb osoby v~grafu je dán nejkratší cestou (Dijskrův algoritmus). Každá cesta tedy znamená pohyb po několika hranách dopravního grafu. S~určitou pravděpodobností vznikají kontakty mezi všemi osobami, které cestují po společné hraně, bez ohledu na začátek a konec cesty. 
+Pohyb osoby v~grafu je dán nejkratší cestou (Dijskrův algoritmus). Každá cesta tedy znamená pohyb po několika hranách dopravního grafu. S~určitou prav\-dě\-po\-dob\-nos\-tí vznikají kontakty mezi všemi osobami, které cestují po společné hraně, bez ohledu na začátek a konec cesty. 
 
 
 %Na společných částech cest se lidé potkávají i tehdy, pokud směřují z různých míst a/nebo do různých cílů, díky tomu získáme příležitosti pro vznik dalších kontaktů. Pro každý požadavek na cestování osob mezi městy (práce, přátelé, rodina) se pomocí Dijskrova algoritmu nalezne nejkratší cesta a pro všechny cestující na společných úsecích se vygenerují příslušné kontakty do dopravní vrstvy grafu kontaktů.
@@ -175,7 +175,7 @@ Výsledkem sloučení jednotlivých kontaktních vrstev je graf kontaktů. Z~vý
 \label{maticekontaktu}
 \end{figure}
 
-Pro řadu kontaktů však nejsou referenční hodnoty k~dispozici. Matice kontaktů uvedené v~\cite{Prem_etal2017} nemají tak podrobné dělení jako naše kontaktní vrstvy, kterým přisuzujeme váhy tak, aby odpovídaly těmto výzkumům. Nemůžeme si být například jisti množstvím kontaktů v~kategorii přátel, která spadá do referenční kategorie domov (návštěvy) či jiných kategorií. I~když můžeme znát pravděpodobnost návštěvy restaurace pro danou věkovou kategorii, již nezjistíme, kolik restaurací dotyčný navštěvuje. Rovněž znalost poměru venkovních a vnitřních aktivit, která je jistě závislá na počasí, nepochybně hraje při šíření epidemie významnou roli. Obdobná situace nastává při odhadu počtu návštěvníků obchodů, kde je rozhodně nutné přihlédnout ke skutečnosti, že kontakty v~obchodech jsou většinou krátkodobé.
+Pro řadu kontaktů však nejsou referenční hodnoty k~dispozici. Matice kontaktů uvedené v~\cite{Prem_etal2017} nemají tak podrobné dělení jako naše kontaktní vrstvy, kterým přisuzujeme váhy tak, aby odpovídaly těmto výzkumům. Nemůžeme si být například jisti množstvím kontaktů v~kategorii přátel, která spadá do referenční kategorie domov (návštěvy) či jiných kategorií. I~když můžeme znát pravděpodobnost návštěvy restaurace pro danou věkovou kategorii, již nezjistíme, kolik restaurací dotyčný navštěvuje. Rovněž znalost poměru venkovních a vnitřních aktivit, která je jistě závislá na počasí, nepochybně hraje při šíření epidemie vý\-znam\-nou roli. Obdobná situace nastává při odhadu počtu návštěvníků obchodů, kde je rozhodně nutné přihlédnout ke skutečnosti, že kontakty v~obchodech jsou většinou krátkodobé.
 Velkou otázkou jsou rovněž geografické preference pohybu obyvatel. Ty je možné odhadnout z~hustoty sítě veřejné dopravy. S~dopravou rovněž souvisí pohyb osob mezi regionem a okolím, neboť může významnou měrou ovlivnit výsledek simulace například přílivem pracovních sil z~okolí, nebo naopak jejich odlivem za prací mimo region. Získání dat pro tuto oblast je předmětem dalších aktivit a budou součástí finální verze EPICITY. Jako vhodný zdroj se jeví například anonymizovaná data o~pohybu osob, získaná od operátorů mobilních sítí. 
 
 Jedním z~výhod našeho a podobných modelů je možnost sledovat šíření epidemie regionem. Obrázek \ref{sireniepidemie} ukazuje hypotetický příklad, kdy epidemii nestojí v~cestě žádná omezení. Šedivé body představují zdravé obyvatele, červenou barvou jsou označeni nemocní a černé body reprezentují zemřelé. Vzhledem k~tomu, že modelovaný region je dopravně svázán poměrně hustou dopravní infrastrukturou, dochází k~šíření infekce ve všech sídlech s~obdobnou intenzitou, což je dáno především právě každodenním cestováním obyvatel do zaměstnání, do škol či na nákupy.
@@ -195,9 +195,9 @@ Praktickým a reálně uplatněným výsledkem, který byl získán díky použi
 
 Jakkoli jsou datové podklady, které používáme, často kusé anebo nedostupné, podrobnou analýzou jednotlivých druhů kontaktů a jejich kombinací je možné získat funkční a v~epidemickém modelu použitelný graf kontaktů vedoucí k~výsledkům odpovídajícím realitě. To lze ukázat například porovnáním predikce vývoje kontaktů našeho modelu s~daty ze sociologických výzkumů (pokud tato data nebyla použita jako vstupy do modelu), daty o~vytíženosti dopravy, počtu návštěvníků restaurací a obchodů a především srovnáním s~epidemickými daty získávanými v~průběhu epidemie. 
 
-Výhodou použití grafu kontaktů, modelujícího až na úroveň jednotlivců, je především možnost přisoudit každé osobě konkrétní vlastnosti i způsob chování a sledovat, jakým způsobem se změní výsledky simulace. Každý simulovaný svět, který takto vytvoříme, umožňuje srovnávat hypoteticky možné scénáře chování společnosti s~realitou, která je dána skutečným průběhem epidemie. A~jelikož je do grafu kontaktů možno vložit přesně geograficky i sociálně definované infekční jedince, můžeme zjistit, jakým způsobem se změní šíření epidemie například díky superspreadingovým událostem, ať už jde o~setkání v~restauracích, na sportovních utkáních či v~některé ze škol. 
+Výhodou použití grafu kontaktů, modelujícího až na úroveň jednotlivců, je pře\-de\-vším možnost přisoudit každé osobě konkrétní vlastnosti i způsob chování a sledovat, jakým způsobem se změní výsledky simulace. Každý simulovaný svět, který takto vytvoříme, umožňuje srovnávat hypoteticky možné scénáře chování společnosti s~realitou, která je dána skutečným průběhem epidemie. A~jelikož je do grafu kontaktů možno vložit přesně geograficky i sociálně definované infekční jedince, můžeme zjistit, jakým způsobem se změní šíření epidemie například díky superspreadingovým událostem, ať už jde o~setkání v~restauracích, na sportovních utkáních či v~některé ze škol. 
 
-Z~uvedeného je patrné, že model založený na grafu kontaktů vytvořeném podle zde uvedené metodiky umožňuje vytvářet nejrůznější scénáře situací, jejichž srovnáním je možné získat představu o~šíření epidemie za nejrůznějších podmínek. Oproti jiným modelům však tento přístup vyžaduje velké úsilí při získávání potřebných dat a pro jeho vyladění je třeba značných odborných i časových investic.
+Z~uvedeného je patrné, že model založený na grafu kontaktů vytvořeném podle zde uvedené metodiky umožňuje vytvářet nejrůznější scénáře situací, jejichž srov\-ná\-ním je možné získat představu o~šíření epidemie za nejrůznějších podmínek. Oproti jiným modelům však tento přístup vyžaduje velké úsilí při získávání potřebných dat a pro jeho vyladění je třeba značných odborných i časových investic.
 
 
 
