--- a/prispevky/060-Typy_modelu/main.tex
+++ b/prispevky/060-Typy_modelu/main.tex
@@ -91,7 +91,7 @@ SIR model je dnes základním stavebním kamenem takřka všech epidemických mo
 
 Zatímco matematika epidemií je relativně jednoduchá, problémy nastávají, setká-li se s~reálným světem. Modely jsou z~principu nedokonalé, mnohdy založené na řadě netestovatelných, nepřesných, či dokonce úmyslně nepřesných předpokladů (například standardní předpoklad dokonalého míchání populace), data jsou neúplná či nepřesná. Jde-li navíc o~rozsáhlou epidemii, či dokonce pandemii, jako v~případě covid-19, vstupují do hry další faktory, např. v~zásadě kontinuální proměna situace (změny v~chování lidí, nové informace o~infekci, nové postupy v~boji s~epidemií), tlak veřejnosti (jak bychom měli ideálně reagovat, bude dané opatření dostatečně fungovat, jak se bude epidemie dále vyvíjet), či dokonce vlastní obavy (co když jsme někde udělali chybu, co když to s~doporučeními přeženeme, nebo naopak budeme příliš optimističtí). Řečeno s~lehkou nadsázkou, je to, jako když stavíme koleje, přičemž za zády už slyšíme přijíždět vlak. 
 
-Jedna z~takových kontinuálních proměn se týkala základní struktury samotných modelů. Jak postupně přicházely nové informace, modelová struktura se vyvíjela. Počáteční SIR model jako základ pro výpočet bazálních parametrů epidemie zmíněných výše se brzy změnil na SEIR model s~třídou $E$ popisující nakažené, ale zatím neinfekční jedince. Z~tohoto modelu se následně stal SEIAR model s~třídou $A$ jedinců asymptomatických po celou dobu epidemie, a nakonec SEPIAR model, kdy se třída $I$ rozdělila na třidu $P$ presymptomatických jedinců (infekční, zatím bez symptomů) a následnou třídu $I$ jedinců se symptomy (obr.\,\ref{SEPIAR1}). Zahrnutí tříd $A$ a $P$ bylo důležité z~toho důvodu, že zatímco jedinci asymptomatičtí po celou dobu své infekčnosti mají nižší nakažlivost, symptomatičtí infekční jedinci mají díky (samo)izolaci nižší množství kontaktů. Řízení epidemie prostřednictvím opatření, ale také vlastní změny chování vedou k~časově proměnné hodnotě parametru $\beta$ modelu (\ref{SIR1}); tento parametr se však vyskytuje ve všech uvedených modelových variantách. V~důsledku změn tohoto parametru také epidemie covid-19 nikde neodpovídá pouze jedné vlně. V~České republice jsme byli svědky dnes už pěti epidemických vln. Kromě toho se v~čase měnila také prodleva mezi testem a reportingem v~případě infekčnosti, účinnost trasování a nemocniční péče, ochota plošná opatření dodržovat, převládající virová varianta či intenzita očkování. Epidemie covid-19 je tak nejen epidemiologický, ale do značné míry také sociální fenomén.   
+Jedna z~takových kontinuálních proměn se týkala základní struktury samotných modelů. Jak postupně přicházely nové informace, modelová struktura se vyvíjela. Počáteční SIR model jako základ pro výpočet bazálních parametrů epidemie zmí\-ně\-ných výše se brzy změnil na SEIR model s~třídou $E$ popisující nakažené, ale zatím neinfekční jedince. Z~tohoto modelu se následně stal SEIAR model s~třídou $A$ jedinců asymptomatických po celou dobu epidemie, a nakonec SEPIAR model, kdy se třída $I$ rozdělila na třidu $P$ presymptomatických jedinců (infekční, zatím bez symptomů) a následnou třídu $I$ jedinců se symptomy (obr.\,\ref{SEPIAR1}). Zahrnutí tříd $A$ a $P$ bylo důležité z~toho důvodu, že zatímco jedinci asymptomatičtí po celou dobu své infekčnosti mají nižší nakažlivost, symptomatičtí infekční jedinci mají díky (samo)izolaci nižší množství kontaktů. Řízení epidemie prostřednictvím opatření, ale také vlastní změny chování vedou k~časově proměnné hodnotě parametru $\beta$ modelu (\ref{SIR1}); tento parametr se však vyskytuje ve všech uvedených modelových variantách. V~důsledku změn tohoto parametru také epidemie covid-19 nikde neodpovídá pouze jedné vlně. V~České republice jsme byli svědky dnes už pěti epidemických vln. Kromě toho se v~čase měnila také prodleva mezi testem a reportingem v~případě infekčnosti, účinnost trasování a nemocniční péče, ochota plošná opatření dodržovat, převládající virová varianta či intenzita očkování. Epidemie covid-19 je tak nejen epidemiologický, ale do značné míry také sociální fenomén.   
 
 \begin{figure}[ht]
 	\begin{center}
@@ -131,7 +131,7 @@ Jedna z~takových kontinuálních proměn se týkala základní struktury samotn
 \begin{equation}
 1-(1-b)^{c\,I[t]/N} \approx b\, c \, \frac{I[t]}{N}.
 \end{equation}
-Rozlišujeme dva druhy nefarmaceutických protiepidemických opatření, opatření určená k~omezení kontaktů (zavření škol či restaurací, omezení pohybu, apod.) a osobní ochranná opatření omezující pravděpodobnost nákazy při kontaktu (roušky, ruce, rozestupy, užívání vitamínů apod.). Zatímco první typ opatření snižuje hodnotu $c$, druhý typ omezuje pravděpodobnost nákazy při kontaktu a snižuje hodnotu $b$. Označíme-li proporcionální redukci parametru $b$ jako $r_b$ a parametru $c$ jako $r_c$, pak složený parametr $\beta$ v~modelu (\ref{SIR1}) nebo v~jakémkoli příbuzném modelu můžeme rozepsat jako $\beta = r_b\,b\,r_c\,c$. Zatímco hodnotu $c$ můžeme odhadnout z~výsledků dotazníkových šetření a je mimo jiné dostupná v~literatuře \cite{Prem_etal2017}, hodnotu $r_c$ můžeme odhadnout taktéž z~výsledků dotazníkových šetření. V~Česku to můžeme udělat s~využitím projektu „Život během pandemie“ agentury PAQ Research \cite[\url{www.zivotbehempandemie.cz}]{paqcovid}. Odhad hodnot $b$ a $r_b$ je komplikovanější, v~zásadě jej můžeme získat pouze prostřednictvím \emph{kalibrace modelu}, kdy se určitou systematickou změnou hodnot těchto parametrů snažíme dosáhnout toho, aby vypočtený průběh epidemie odpovídal co nejvíce reálným pozorováním \cite{Yang_etal2014,King_etal2016}. Hodnoty $r_b$ a $b$ mohou být naopak vyšší v případě nakažlivější varianty viru.
+Rozlišujeme dva druhy nefarmaceutických protiepidemických opatření, opatření ur\-če\-ná k~omezení kontaktů (zavření škol či restaurací, omezení pohybu, apod.) a osobní ochranná opatření omezující pravděpodobnost nákazy při kontaktu (roušky, ruce, rozestupy, užívání vitamínů apod.). Zatímco první typ opatření snižuje hodnotu $c$, druhý typ omezuje pravděpodobnost nákazy při kontaktu a snižuje hodnotu $b$. Označíme-li proporcionální redukci parametru $b$ jako $r_b$ a parametru $c$ jako $r_c$, pak složený parametr $\beta$ v~modelu (\ref{SIR1}) nebo v~jakémkoli příbuzném modelu můžeme rozepsat jako $\beta = r_b\,b\,r_c\,c$. Zatímco hodnotu $c$ můžeme odhadnout z~výsledků dotazníkových šetření a je mimo jiné dostupná v~literatuře \cite{Prem_etal2017}, hodnotu $r_c$ můžeme odhadnout taktéž z~výsledků dotazníkových šetření. V~Česku to můžeme udělat s~využitím projektu „Život během pandemie“ agentury PAQ Research \cite[\url{www.zivotbehempandemie.cz}]{paqcovid}. Odhad hodnot $b$ a $r_b$ je komplikovanější, v~zásadě jej můžeme získat pouze prostřednictvím \emph{kalibrace modelu}, kdy se určitou systematickou změnou hodnot těchto parametrů snažíme dosáhnout toho, aby vypočtený průběh epidemie odpovídal co nejvíce reálným pozorováním \cite{Yang_etal2014,King_etal2016}. Hodnoty $r_b$ a $b$ mohou být naopak vyšší v případě nakažlivější varianty viru.
 
 Podobně jako v~SIR modelu je i v~jeho příbuzných SEIR, SEIAR a SEPIAR modelech (efektivní) reprodukční číslo $R$ násobkem parametru $\beta$. Opatření znamenající snížení hodnoty $\beta$ tak implikují snížení exponenciálního růstu a v~případě poklesu reprodukčního čísla $R$ pod hodnotu jedna dokonce jeho úplné potlačení. Nepochopení síly exponenciálního růstu však přináší velké riziko. Dlouho se totiž relativně nic neděje, až najednou začnou čísla letět prudce vzhůru. Pak už je však těžké zatáhnout za záchrannou brzdu, zvláště má-li infekce latentní periodu a mnoho nakažených čeká za oponou na chvíli, kdy se stanou nakažlivými. Rychlé zavedení přísných opatření naopak vyvolává všeobecný nesouhlas, neboť případů je v~dané chvíli relativně málo. V~Austrálii například opakovaně zaváděli přísná opatření i při objevení se jen několika málo případů covid-19 \cite{australia_opatreni}. Je to poněkud extrémní případ, nicméně i toto zdánlivě nesmyslné rozhodnutí dává ve světle znalosti základního zákona epidemie a exponenciálního růstu smysl. Opatření se tak nezavádějí kvůli existenci jednotek až desítek případů, ale proto, abychom předešli desítkám a stovkám tisíc případů. 
 
@@ -145,7 +145,7 @@ Znalost dynamiky epidemie, založená na matematických modelech a známá více
 	\end{array}
 	\label{SEIR1}
 \end{equation}
-kde $E$ je třída jedinců, kteří už jsou nakažení, ale stále ještě ne infekční (délku odpovídající latentní periody infekce odráží parametr $\sigma$). Zaveďme nyní od určitého okamžiku po vypuknutí epidemie opatření, která sníží počet denních kontaktů o~65 \% (tedy $r_c$, do té doby rovno jedné, bude nyní $0.35$), a v~určitém čase pak tato opatření opět zrušme ($r_c$ se vrátí na hodnotu 1). Výsledkem je druhá vlna epidemie, jak jsme několikrát pozorovali i v~realitě (obr.\,\ref{SEIR-vlna}). Důvodem vzniku nové vlny je, že po rozvolnění se hodnota efektivního reprodukčního čísla $R$ opět vrátí nad hodnotu 1, neboť je v~populaci stále dostatek vnímavých jedinců (tedy velký poměr $S[t]/N$), a tedy kontakty mezi vnímavými a infekčními jedinci jsou stále dostatečně časté.
+kde $E$ je třída jedinců, kteří už jsou nakažení, ale stále ještě ne infekční (délku odpovídající latentní periody infekce odráží parametr $\sigma$). Zaveďme nyní od určitého okamžiku po vypuknutí epidemie opatření, která sníží počet denních kontaktů o~65~\% (tedy $r_c$, do té doby rovno jedné, bude nyní $0.35$), a v~určitém čase pak tato opatření opět zrušme ($r_c$ se vrátí na hodnotu 1). Výsledkem je druhá vlna epidemie, jak jsme několikrát pozorovali i v~realitě (obr.\,\ref{SEIR-vlna}). Důvodem vzniku nové vlny je, že po rozvolnění se hodnota efektivního reprodukčního čísla $R$ opět vrátí nad hodnotu 1, neboť je v~populaci stále dostatek vnímavých jedinců (tedy velký poměr $S[t]/N$), a tedy kontakty mezi vnímavými a infekčními jedinci jsou stále dostatečně časté.
 
 \begin{figure}[ht]
 	\begin{center}
@@ -193,7 +193,7 @@ Jednou z~nejčastějších otázek provázejících epidemii covid-19 nejen v~Č
 
 Pomoci mohou standardní epidemické modely typu SIR či SEPIAR, strukturované podle typu kontaktů a umožňující jednotlivá opatření kdykoli zapínat a vypínat. Zatímco v~detailních agentově orientovaných modelech to můžeme dělat velmi sofistikovaně (viz kapitoly \ref{Agentni_modely} a \ref{Skoly}), v~kompartmentových modelech jsme v~zásadě odkázáni na časový vývoj počtu kontaktů a hypotézy o~tom, do jaké míry daná opatření počty daných typů kontaktů redukují. Alternativně se můžeme ptát, jaká redukce různých typů kontaktů je dostatečná pro to, aby epidemie přestala růst.   
 
-Jedním z~modelů, které jsme v~rámci centra BISOP vytvořili, je model první epidemické vlny z~jara 2020. Detaily modelu je možné najít v~práci \cite{Berec_modelB}, zde popíšeme jen jeho základní strukturu. Jde o~kompartmentový SEPIAR model, v~němž se navíc část symptomatických infekčních jedinců rozhodne netestovat, tudíž se neobjeví v~oficiálních statistikách. Model je věkově i prostorově rozlišený a je kalibrovaný na časový vývoj kumulativního počtu detekovaných (v~té době dominantně symptomatických) jedinců, rozlišený podle věku (levý sloupec v~obr.\,\ref{shelterning_seniors}). Tento model pokrývá období od začátku epidemie do 7.\,5.\,2020, kdy po celou dobu v~zásadě platila stejná protiepidemická opatření, a pro které jsme měli k~dispozici průměrnou hodnotu pohledu kontaktů ve školách, práci, domácnostech a jinde. Model také explicitně zahrnuje načasování zavedení jednotlivých opatření (tab.\,\ref{table:interventions}). S~takto nastaveným modelem jsme zkoumali různé alternativní scénáře, které v~daném období mohly nastat. Ukážeme si tři z~nich. První scénář uvažuje zahájení všech přijatých opatření o~čtyři dny dříve či čtyři dny později než ve skutečnosti. Jak ukazuje obr.\,\ref{scenariosR1R2}, každé čtyři dny zpoždění znamenaly zdvojnásobení počtu detekovaných symptomatických infekčních jedinců ke konci zkoumaného období. Mimo jiné tento výsledek jasně demonstruje důsledky exponenciálního růstu: včasný zásah je zásadní. 
+Jedním z~modelů, které jsme v~rámci centra BISOP vytvořili, je model první epidemické vlny z~jara 2020. Detaily modelu je možné najít v~práci \cite{Berec_modelB}, zde popíšeme jen jeho základní strukturu. Jde o~kompartmentový SEPIAR model, v~němž se navíc část symptomatických infekčních jedinců rozhodne netestovat, tudíž se neobjeví v~oficiálních statistikách. Model je věkově i prostorově rozlišený a je kalibrovaný na časový vývoj kumulativního počtu detekovaných (v~té době dominantně symptomatických) jedinců, rozlišený podle věku (levý sloupec v~obr.\,\ref{shelterning_seniors}). Tento model pokrývá období od začátku epidemie do 7.\,5.\,2020, kdy po celou dobu v~zásadě platila stejná protiepidemická opatření, a pro které jsme měli k~dispozici průměrnou hodnotu počtu kontaktů ve školách, práci, domácnostech a jinde. Model také explicitně zahrnuje načasování zavedení jednotlivých opatření (tab.\,\ref{table:interventions}). S~takto nastaveným modelem jsme zkoumali různé alternativní scénáře, které v~daném období mohly nastat. Ukážeme si tři z~nich. První scénář uvažuje zahájení všech přijatých opatření o~čtyři dny dříve či čtyři dny později než ve skutečnosti. Jak ukazuje obr.\,\ref{scenariosR1R2}, každé čtyři dny zpoždění znamenaly zdvojnásobení počtu detekovaných symptomatických infekčních jedinců ke konci zkoumaného období. Mimo jiné tento výsledek jasně demonstruje důsledky exponenciálního růstu: včasný zásah je zásadní. 
 
 \begin{figure}
 	\begin{center}
