--- a/prispevky/085-Nove_vyzvy/main.tex
+++ b/prispevky/085-Nove_vyzvy/main.tex
@@ -54,7 +54,7 @@ implementovat následující změny:
   \item[Leadership:] Prioritním projektům věnuje premiér a další představitelé státu podstatnou část svého času a energie (účastní se rozhodování, koordinace, komunikace interní i externí)
 \end{description}
 
-\section*{Radikální otevřenost -- vládnutí jako spolupráce široké koalice partnerů včetně občanů}
+\section*{Radikální otevřenost -- vládnutí jako spolupráce \\ široké koalice partnerů včetně občanů}
 
 \paragraph{Definice:}Pokud je spolupráce důležitá pro standardní problémy, pro komplexní výzvy zmíněné v~úvodu textu je zcela nezbytná. Nejde o~kosmetické změny, nýbrž o~zcela radikální změnu přístupu. Rigidní vertikální organizace a „resortní“ přístup státu jsou neadekvátní pro nejisté, rychle se měnící a technologické výzvy dneška \cite{d_eggers_future_2020}. Zpráva OECD z~roku 2017 konstatuje, že problémy jsou dnes příliš komplexní na to, aby je stát řešil sám, a komentuje rozostření hranic mezi veřejným, soukromým a neziskovým sektorem \cite{oecd_public_governance_reviews_skills_2020}. Klíčovým partnerem pro stát by samozřejmě měl být občan.
 
@@ -80,7 +80,7 @@ Jsme přesvědčeny, že nové výzvy budou vyžadovat právě takovýto partner
   \item[Otevřenost:] Transformovat veřejnou správu a její pojetí projektů k~skutečnému partnerství s~jinými organizacemi a zbytkem společnosti (samosprávy, akademická sféra, soukromý sektor, média, nevládní organizace atd.)
   \item[Partnerství:] Místo direktivního „řízení“ pojímat vládnutí jako „spolupráci široké koalice partnerů“ \cite{department_of_the_prime_minister_and_cabinet_our_2019}.
   \item[Spolupráce:] Odstoupit od vertikálního modelu, vedoucího k~„resortismu“
-  \item[Orientace na občana:] koncepci „Klientsky orientovaná veřejná správa“, schválenou v~roce 2020 \cite{koncepce_verejna_sprava_2030} uvést z~teorie do praxe nejenom v~otázkách digitalizace.
+  \item[Orientace na občana:] koncepci „Klientsky orientovaná veřejná správa“, schvá\-le\-nou v~roce 2020 \cite{koncepce_verejna_sprava_2030} uvést z~teorie do praxe nejenom v~otázkách digitalizace.
 \end{description}
 
 \section*{Schopnost inovace a rychlé reakce -- nutnost vytvořit prostředí, kde je možné riskovat}
@@ -89,7 +89,7 @@ Jsme přesvědčeny, že nové výzvy budou vyžadovat právě takovýto partner
 
 Toho je možno dosáhnout změnou v~oblasti systémů a procesů, vytvořením kultury, ve které je možné riskovat a otevřenou komunikací a nastavením očekávání v~celém ekosystému (NKÚ, média, veřejnost).
 
-\paragraph{Očkování:} Očkování bylo se svými rychle se měnícími a často těžko předvídatelnými parametry typickým příkladem problému, kdy je třeba experimentovat, pracovat s~upravitelnými scénáři a průběžně se učit z~chyb. Zejména nákup vakcín byl příkladem velmi riskantního projektu s~potenciálně velkým pozitivním dopadem.
+\paragraph{Očkování:} Očkování bylo se svými rychle se měnícími a často těžko před\-ví\-da\-tel\-ný\-mi parametry typickým pří\-kla\-dem problému, kdy je třeba experimentovat, pracovat s~upravitelnými scénáři a průběžně se učit z~chyb. Zejména nákup vakcín byl příkladem velmi riskantního projektu s~potenciálně velkým pozitivním dopadem.
 
 \paragraph{Příklad Británie:} V~Británii lze najít příklady, kdy se stát poučil ze svých chyb -- „fiasko“ nákupu zdravotnického materiálu ze strany MZ na jaře 2020 vedlo k~ustanovení nestandardního prvku Vaccine Task Force \cite{balls_secrets_2021}. V~otázce nákupu vakcín Británie svůj způsob rozhodování průběžně přizpůsobovala situaci -- například vytvořila nový ministerský panel, který mohl rychle schválit investice větší než 150 milionů GBP. Došlo také ke zrychlení schvalování -- z~obvyklých čtyř týdnů na 7--9 dnů \cite{national_audit_office_investigation_2020}. Vedoucí VTF Binghamová nedostala „bianco šek“, rozhodnutí probíhalo na základě „business case“ pro jednotlivé vakcíny. Kritéria však byla jasná -- rychlost a efektivita vakcín byla důležitější než náklady na ně \cite{bolzen_kate_2021}. Hlavní představitelé také pravidelně informovali veřejnost o~nejnovějších rozhodnutích a jejich odůvodnění \cite{davis_uk_2020}.
 
@@ -117,9 +117,9 @@ Možná reforma by tedy měla obsahovat následující komponenty:
   \item[Komunikace a očekávání:] Otevřená komunikace s~celým ekosystémem (NKÚ, média, politici, veřejnost, nevládní organizace) o~vhodné míře rizika a jejich důvodech
 \end{description}
 
-\section*{Kompetence pro 21. století -- správní lidé na správném místě}
+\section*{Kompetence pro 21. století -- správní lidé \\ na správném místě}
 
-\paragraph{Definice:} Před sto lety bylo možné pohlížet na zaměstnance jako na snadno zaměnitelné součástky. V~dnešním světě jsou ale kvalita a vhodné kompetence lidí zcela klíčové. Úspěšné firmy důraz na práci s~„lidským kapitálem“ v~posledních desetiletích integrovaly do jádra svého fungování. V~této oblasti je také možné pozorovat největší rozdíl mezi soukromým a veřejným sektorem \cite{d_eggers_future_2020}.
+\paragraph{Definice:} Před sto lety bylo možné pohlížet na zaměstnance jako na snadno za\-mě\-ni\-tel\-né součástky. V~dnešním světě jsou ale kvalita a vhodné kompetence lidí zcela klíčové. Úspěšné firmy důraz na práci s~„lidským kapitálem“ v~posledních desetiletích integrovaly do jádra svého fungování. V~této oblasti je také možné pozorovat největší rozdíl mezi soukromým a veřejným sektorem \cite{d_eggers_future_2020}.
 
 Jakákoliv reforma vládnutí by měla zahrnovat důraz na investici do kompetencí pro 21. století, tedy zdánlivě jednoduché „mít správné lidi na správném místě“. Je potřeba plánovat budoucí potřeby s~vědomím změn, které nás čekají. Je také nutné přilákat do politiky i veřejné správy schopné zaměstnance, pracovat na jejich rozvoji, motivaci a správném využití. V~návaznosti na výše popsanou nutnost větší otevřenosti je také záhodné podpořit flexibilnější modely a propustnost veřejné správy a zbytku společnosti.
 
@@ -147,7 +147,7 @@ flexibilita \cite{dondi_future-citizen_2020}.
 
 Po vzoru jiných zemí \cite{thomas_finding_2021, ministere_gestion_2015} je vhodné porovnat budoucí potřeby se současným stavem a naplánovat, jak případné mezery překlenout. Zmapování současných dovedností by též umožnilo větší flexibilitu zapojení úředníků -- tedy „vypůjčování“ odborníků na jiný projekt či resort. Některé činnosti bude potřeba navíc koncipovat zcela jinak -- odborníci se shodují, že 25--40 \% času tráví úředníci úkoly, které by bylo možné jednoduše automatizovat \cite{department_of_the_prime_minister_and_cabinet_our_2019, deloitte_augmented_2017}. Zajímavým příkladem dopadů technologických změn byly během pandemie proměny trasování, viz kapitola \ref{Trasovani}.
 
-Paralelně se strategickým plánováním lidského kapitálu ve státní správě je potřeba změnit mnohé procesy a posunout tak flexibilitu státní správy blíže k~soukromému sektoru.
+Paralelně se strategickým plánováním lidského kapitálu ve státní správě je po\-tře\-ba změnit mnohé procesy a posunout tak flexibilitu státní správy blíže k~soukromému sektoru.
 
 Větší mobilita může být dosažena vytvořením „flexibilních“ týmů se všeobecnými dovednostmi, například jako britská Priority Projects Unit, které jsou pak nasazovány do oblastí s~největší momentální prioritou a potřebou kapacit. ČR těchto prvků využívala sporadicky, ale úspěšně. Příkladem je tým „Chytré karantény“ (Centrální řídící tým), který působí od jara 2020 a kombinuje příslušníky AČR a pracovníky NAKITu. Specifické postavení NAKIT (státní podnik) mu umožňuje jednodušeji najmout odborníky na krátkodobý úvazek.
 
@@ -166,7 +166,7 @@ Mezi hlavní prvky změny práce s~lidskými zdroji patří:
 
 \section*{Diskuse}
 
-V~tomto textu jsme si daly za cíl využít přípravu a provedení očkování jako případovou studii pro návrh nutných širších změn ve veřejné správě.
+V~tomto textu jsme si daly za cíl využít přípravu a provedení očkování jako pří\-pa\-do\-vou studii pro návrh nutných širších změn ve veřejné správě.
 
 Čtyři oblasti, které jsme identifikovaly, považujeme za klíčové. Samozřejmě jsou také navzájem propojené -- například větší propustnost mezi soukromým, akademickým a veřejným sektorem je důležitá jak obecně, tak v~případě práce s~lidmi a bude mít dopad i na schopnost inovací.
 
