--- a/prispevky/100-Skoly/main.tex
+++ b/prispevky/100-Skoly/main.tex
@@ -19,7 +19,7 @@ Významným podkladem pro modelování a simulace šíření respiračních i da
 \section*{Data} 
 Pro smysluplné modelování potenciálního průběhu epidemie covid-19 na školách je nutné mít adekvátní data. Tato data by měla vypovídat o~kontaktech relevantních pro přenos nákazy mezi důležitými aktéry uvnitř školy jako sociálního systému. Za nejdůležitější lze považovat dvě množiny aktérů (uzlů) – žáky a učitele, přičemž kontakty mezi žáky a učiteli, mezi žáky navzájem a mezi učiteli navzájem definují různé úrovně vazeb v~síti (grafu). Jednotlivé uzly lze popsat relevantními atributy, u~žáků např. předměty, podle nichž je lze seskupovat (cizí jazyky atd.), a příslušností do jednotlivých tříd, u~učitelů pak např. jejich aprobací či věkem. 
 
-Typickou školu si lze v~tomto ohledu představit jako tzv. víceúrovňovou vícevrstvou síť či graf, v~níž figurují dvě úrovně uzlů (bodů v~obrázcích 1 a 2) reprezentující dvě hlavní skupiny jedinců uvnitř školy – učitele a žáky. Mezi učiteli i mezi žáky probíhají pro přenos nákazy potenciálně rizikové kontakty znázorněné jako vazby (spojnice mezi uzly v~obrázcích 1 a 2). Obrázek 1 zobrazuje všechny učitele a vazby mezi nimi. Vazby relevantní pro přenos viru SARS-CoV-2 mezi učiteli jsou trojího typu: kontakty v~kabinetu, v~práci mimo kabinet a mimo práci, resp. školu. Obrázek 2 potom zobrazuje všechny žáky a vazby mezi nimi, kterých lze rozlišit celkem pět typů vzhledem k~možnosti přenosu viru SARS-CoV-2. Jde o~kontakty v~lavici, při obědě, během přestávky, ve školní družině a mimo školu. Učitelé a žáci jsou vzájemně propojeni prostřednictvím vazeb výuky, kde má každý učitel vazbu na všechny žáky, které vyučuje, o~intenzitě odpovídající počtu vyučovaných hodin a počtu žáků v~dané třídě (tato úroveň zde není zobrazena).
+Typickou školu si lze v~tomto ohledu představit jako tzv. víceúrovňovou ví\-ce\-vrst\-vou síť či graf, v~níž figurují dvě úrovně uzlů (bodů v~obrázcích 1 a 2) reprezentující dvě hlavní skupiny jedinců uvnitř školy – učitele a žáky. Mezi učiteli i mezi žáky probíhají pro přenos nákazy potenciálně rizikové kontakty znázorněné jako vazby (spojnice mezi uzly v~obrázcích 1 a 2). Obrázek 1 zobrazuje všechny učitele a vazby mezi nimi. Vazby relevantní pro přenos viru SARS-CoV-2 mezi učiteli jsou trojího typu: kontakty v~kabinetu, v~práci mimo kabinet a mimo práci, resp. školu. Obrázek 2 potom zobrazuje všechny žáky a vazby mezi nimi, kterých lze rozlišit celkem pět typů vzhledem k~možnosti přenosu viru SARS-CoV-2. Jde o~kontakty v~lavici, při obědě, během přestávky, ve školní družině a mimo školu. Učitelé a žáci jsou vzájemně propojeni prostřednictvím vazeb výuky, kde má každý učitel vazbu na všechny žáky, které vyučuje, o~intenzitě odpovídající počtu vyučovaných hodin a počtu žáků v~dané třídě (tato úroveň zde není zobrazena).
 
 Empirická data, která by umožnila sestavit takovouto víceúrovňovou vícevrstvou síť, lze získat v~zásadě třemi způsoby. Jde o~pozorování, simulaci a dotazování. Pozorování v~tomto kontextu znamená jakýkoli způsob, který umožní externím výzkumníkům zjistit, kdo je s~kým v~rámci zkoumané školy v~kontaktu. Jedním ze způsobů, jak takové pozorování provést, je pomocí nositelných snímačů, které dostanou všichni sledovaní aktéři, aby je po dobu pozorování nosili (viz např. \cite{stehle2011high, gemmetto2014mitigation}. Tyto senzory elektronicky zaznamenávají, zda a jak dlouho jsou v~předem určené blízkosti k~ostatním senzorům, tj. jejich nositelům. Výhodami tohoto typu sběru dat jsou přesnost a relativní objektivita takto získaných dat, protože u~tohoto způsobu sběru dat lze flexibilně nastavit měření různé délky a vzdálenosti kontaktů a netřeba při tom spoléhat na subjektivní vnímání zkoumaných osob. Nevýhodami pozorovacích technik naopak jsou jejich technické, finanční a časové nároky. Simulace realistických dat na základě známých parametrů a charakteristik odpovídajících sítím, které jsou předmětem zájmu, představuje alternativu, kterou lze také za určitých podmínek použít (viz např. \cite{mcgee2021model, potter2012estimating}. Simulace dat nahrazuje jejich sběr, takže odpadají komplikace spojené s~logistickými a finančními nároky sběru dat. To má ale svou cenu v~tom, že validita nasimulovaných dat předpokládá dostatečné znalosti o~struktuře a dynamice daných sítí, které ne vždy mohou být k~dispozici nebo zachycovat všechny podstatné rysy simulovaných sítí.
 
@@ -47,7 +47,7 @@ Pro posouzení struktury sítě jako celku lze využít řadu metrik, které pat
 \section*{Model a simulace}
 Pro simulaci dopadů jednotlivých režimových opatření na šíření covid-19 ve škole byl využit agentní epidemiologický model, vyvinutý původně pro simulaci šíření covid-19 ve městě, jak popisuje kapitola 11 tohoto sborníku. Takový model kombinovaný s~empiricky získanou sítí kontaktů představuje nejlepší způsob, jak zhodnotit dopad jednotlivých režimových opatření omezení provozu školy. 
 
-Tato opatření se mohou zakládat na dostupné teorii, praktické potřebě a možnostech daného modelu. Zde budou porovnána čtyři různá opatření, která představují jen úzký výběr z~řady dalších myslitelných opatření v~prostředí základních škol (více simulovaných opatření v~\cite{Brom2021.06.28.21259628}). Vzhledem k~tomu, že během konzumace jídla a pití v~jídelně může docházet k~výraznému zvýšení virové nálože ve vzduchu (viz např. \cite{Chen_etal2020, eichler2021transmission}), prvním zkoumaným opatřením bude prosté uzavření školní jídelny a společných obědů mezi žáky, modelované jako úplné uzavření vrstvy kontaktů během oběda. Druhým opatřením, které je relativně snadno dostupné, je tzv. homogenizace tříd neboli zamezení kontaktů mezi žáky napříč rozdílnými školními třídami. V~tomto scénáři tak žákům zůstávají pouze ty kontakty, které mají s~ostatními ze své třídy. Posledním opatřením jsou tzv. rotace, kdy v~každém ročníku třída A~nejprve má prezenční výuku, zatímco třída B má výuku distanční, a každý týden se v~tomto schématu střídají. Za účelem zachycení citlivosti jednotlivých opatření na celkový průběh epidemie v~populaci je každé opatření simulováno ve čtyřech různých podmínkách od slabé epidemie (průměrný denní import infekčních jedinců odpovídá 14,6 na 100 tisíc jedinců v~celé populaci) až po epidemii silnou (denní import 146 infekčních jedinců na 100 tisíc v~populaci).
+Tato opatření se mohou zakládat na dostupné teorii, praktické potřebě a mož\-nos\-tech daného modelu. Zde budou porovnána čtyři různá opatření, která představují jen úzký výběr z~řady dalších myslitelných opatření v~prostředí základních škol (více simulovaných opatření v~\cite{Brom2021.06.28.21259628}). Vzhledem k~tomu, že během konzumace jídla a pití v~jídelně může docházet k~výraznému zvýšení virové nálože ve vzduchu (viz např. \cite{Chen_etal2020, eichler2021transmission}), prvním zkoumaným opatřením bude prosté uzavření školní jídelny a společných obědů mezi žáky, modelované jako úplné uzavření vrstvy kontaktů během oběda. Druhým opatřením, které je relativně snadno dostupné, je tzv. homogenizace tříd neboli zamezení kontaktů mezi žáky napříč rozdílnými školními třídami. V~tomto scénáři tak žákům zůstávají pouze ty kontakty, které mají s~ostatními ze své třídy. Posledním opatřením jsou tzv. rotace, kdy v~každém ročníku třída A~nejprve má prezenční výuku, zatímco třída B má výuku distanční, a každý týden se v~tomto schématu střídají. Za účelem zachycení citlivosti jednotlivých opatření na celkový průběh epidemie v~populaci je každé opatření simulováno ve čtyřech různých podmínkách od slabé epidemie (průměrný denní import infekčních jedinců odpovídá 14,6 na 100 tisíc jedinců v~celé populaci) až po epidemii silnou (denní import 146 infekčních jedinců na 100 tisíc v~populaci).
 
 \section*{Struktura sítě} 
 
@@ -126,7 +126,7 @@ Rozšíření modelu, který je představen v~této kapitole, se však nemusí o
 
 Výsledky modelu byly využity Ministerstvem školství, mládeže a tělovýchovy ČR k~nastavení režimových opatření při otevírání škol na jaře 2021. Pro využití na jaře 2021 bylo třeba začít plánovat sběr dat v~říjnu a začít sbírat data na začátku listopadu 2020. Model samotný pak byl vyvíjen v~průběhu prosince 2020 a ledna 2021. Pro další využití podobných modelů v~praxi je tak potřeba čas minimálně v~řádu měsíců. To je samozřejmě logisticky i časově poměrně náročné v~podmínkách uzavřených škol, a do budoucna by proto bylo namístě uvažovat o~sběru takových dat preventivně v~normálních podmínkách a ve větším počtu různých typů škol. Sběr dat on-line totiž snižuje návratnost dotazníků a omezení na jednu konkrétní (byť „typickou“) školu je problematické z~hlediska reprezentativnosti.
 
-Sběr dat probíhal na sice vcelku reprezentativní, přesto nadprůměrně velké pražské základní škole, z~čehož plyne omezená reprezentativnost výsledků. Je totiž možné, že se sítě kontaktů mohou mezi školami různých velikostí a typů výrazně lišit. Jakkoli se data sebraná pro tuto studii podobají datům ze zahraničních studií \cite{gemmetto2014mitigation, mcgee2021model, stehle2011high}, nelze vyloučit, že v~případě výrazných a systematických odlišností ve velikosti či organizaci škol se může zkomplikovat zobecnění výsledků pro šíření covid-19 na dalších základních školách. Dalším omezením je to, že se model výhradně zaměřuje na šíření infekce ve škole. Nepočítá tedy nijak s~externalitami simulovaných opatření, tj. s~tím, jak se omezení provozu škol projeví ve styku žáků a učitelů mimo školní provoz nebo na celkové epidemiologické situaci ve společnosti.
+Sběr dat probíhal na sice vcelku reprezentativní, přesto nadprůměrně velké praž\-ské základní škole, z~čehož plyne omezená reprezentativnost výsledků. Je totiž možné, že se sítě kontaktů mohou mezi školami různých velikostí a typů výrazně lišit. Jakkoli se data sebraná pro tuto studii podobají datům ze zahraničních studií \cite{gemmetto2014mitigation, mcgee2021model, stehle2011high}, nelze vyloučit, že v~případě výrazných a systematických odlišností ve velikosti či organizaci škol se může zkomplikovat zobecnění výsledků pro šíření covid-19 na dalších základních školách. Dalším omezením je to, že se model výhradně zaměřuje na šíření infekce ve škole. Nepočítá tedy nijak s~externalitami simulovaných opatření, tj. s~tím, jak se omezení provozu škol projeví ve styku žáků a učitelů mimo školní provoz nebo na celkové epidemiologické situaci ve společnosti.
 
 
 
