--- a/prispevky/130-Compliance/main.tex
+++ b/prispevky/130-Compliance/main.tex
@@ -36,35 +36,33 @@ Z~nich mělo s~trasováním zkušenost 274 lidí. Těmto respondentům byly polo
 \paragraph*{Výsledky pilotního šetření k~tématu trasování.}
 Z~našeho šetření na sociálních sítích vyplývá, že rozhovor s~hygienou je vnímán jako bezproblémový naprostou většinou respondentů, kteří dotazník vyplnili. Dále hodnotili rozhovor jako profesionálně vedený. Pracovníci a pracovnice hygienických linek za uplynulé měsíce odvádějí dobrou práci. Tři ze čtyř dotazovaných uvádějí, že telefonát šel hladce, svižně. Hygiena se téměř polovině nakažených ozve už během prvních 24 hodin po testu, případně po nahlášení rizikového kontaktu a celkově lze s~jistotou vyvrátit obavy, že se lidé telefonátu od hygieny nedočkají.
 
-\begin{figure}
+Možnost sebereportování prozatím užívá jen velmi omezené množství lidí – v~na\-šem drobném šetření na sociálních sítí ho využila jen jedna třetina respondentů. Polovina respondentů o~této možnosti dokonce ani nevěděla. 
+
+Ještě méně lidí v~našem šetření pak aktivně využívá aplikaci eRouška, zhruba každý čtvrtý. Třetina dotazovaných dokonce uvedla, že používali eRoušku dříve, ale aplikaci si odinstalovali.
+
+\pagebreak
+\begin{figure}[h!]
 \begin{center}
     \includegraphics[width=250pt]{./pic/graf1.eps}
 \end{center}    
 % \textit{Graf 1 ukazuje procentuální podíl odpovědí na otázku o převládajících pocitech z telefonátu  hygienou. Většina respondentů měla z telefonátu buď pozitivní pocity, nebo ho zhodnotila jako věcný.}
-
-\caption{Procentuální podíl odpovědí na otázku o~převládajících pocitech z~telefonátu  hygienou. Většina respondentů měla z~telefonátu buď pozitivní pocity, nebo ho zhodnotila jako věcný.}
- 
+\caption{Procentuální podíl odpovědí na otázku o~převládajících pocitech z~telefonátu  hygienou. Většina respondentů měla z~telefonátu buď pozitivní pocity, nebo ho zhodnotila jako věcný (data z pilotního šetření).}
  \end{figure}
-
-Možnost sebereportování prozatím užívá jen velmi omezené množství lidí – v~našem drobném šetření na sociálních sítí ho využila jen jedna třetina respondentů. Polovina respondentů o~této možnosti dokonce ani nevěděla. 
-
-\begin{figure}
+\begin{figure}[h!]
 \begin{center}
     \includegraphics[width=250pt]{./pic/graf2.eps}
  \end{center}    
-    \caption{Procentuální podíl odpovědí na otázku o~využívání nástroje pro sebereportování. Většina respondentů o~této on-line aplikaci nevěděla.}
+    \caption{Procentuální podíl odpovědí na otázku o~využívání nástroje pro sebereportování. Většina respondentů o~této on-line aplikaci nevěděla (data z pilotního šetření).}
 \end{figure}
-
-Ještě méně lidí v~našem šetření pak aktivně využívá aplikaci eRouška, zhruba každý čtvrtý. Třetina dotazovaných dokonce uvedla, že používali eRoušku dříve, ale aplikaci si odinstalovali.
-
-\begin{figure}
+\begin{figure}[h!]
 \begin{center}
     \includegraphics[width=250pt]{./pic/graf3.eps}
  \end{center}    
 %    \textit{Graf 3 ukazuje procentuální podíl odpovědí na otázku o používání aplikace eRouška. Většina respondentů aplikaci nepoužívá, třetina dotázaných používala dříve.}
-\caption{Procentuální podíl odpovědí na otázku o~používání aplikace eRouška. Většina respondentů aplikaci nepoužívá, třetina dotázaných používala dříve.}
+\caption{Procentuální podíl odpovědí na otázku o~používání aplikace eRouška. Většina respondentů aplikaci nepoužívá, třetina dotázaných používala dříve  (data z pilotního šetření).}
  \end{figure}
  
+\pagebreak
 \paragraph* {Výsledky odpovědí v~rámci výzkumu Život během pandemie.}
 Ze vzorku 1975 respondentů pro sociologický výzkum „Život během pandemie“ mělo s~komunikací s~krajskou hygienickou stanicí (dále KHS) zkušenost 14 \% osob. 57 \% z~nich se KHS ozvala do 24 hodin, 76 \% do 48 hodin. Starším lidem se KHS ozvala v~68 \% do 24 hodin, naopak lidem do 34 let jen ve 32 \% případů. 
 
@@ -94,7 +92,7 @@ Jiné důvody & 10\% \\
 \end{tabular}
 \end{center}
 %\textit {Tabulka 1 shrnuje důvody respondentů (N=31) pro neuvedení všech kontaktů během trasování. Respondenti mohli zvolit než jednu možnost.}
-\caption{Důvody respondentů (N=31) pro neuvedení všech kontaktů během trasování. Respondenti mohli zvolit než jednu možnost.}
+\caption{Důvody respondentů (N=31) pro neuvedení všech kontaktů během trasování. Respondenti mohli zvolit více než jednu možnost.}
 \end{table}
 
 \paragraph*{Využívání e-nástrojů sebetrasování a eRoušky.}
@@ -104,12 +102,12 @@ Poslední otázka kopírující náš předchozí výzkum se týkala využíván
 
 \section*{Diskuse}
 \paragraph*{Psychologické hypotézy o~nižší compliance při trasování.}
-Spokojenost účastníků s~průběhem a kvalitou trasování je v~kontrastu s~tím, že lidé při trasování hlásí výrazně méně kontaktů, než by indikovala data ze sociologických průzkumů \cite{Prokop2020a}. V~této sekci představujeme možné psychologické přístupy, skrze něž se dá na výše uvedená data a problematiku compliance nahlížet.  
+Spokojenost účast\-ní\-ků s~průběhem a kvalitou trasování je v~kontrastu s~tím, že lidé při trasování hlásí výrazně méně kontaktů, než by indikovala data ze sociologických průzkumů \cite{Prokop2020a}. V~této sekci představujeme možné psychologické přístupy, skrze něž se dá na výše uvedená data a problematiku compliance nahlížet.  
 
 Jedna ze styčných psychologických teorií popisujících faktory ovlivňující chování je Teorie plánovaného chování \cite{Ajzen1985}. Tato teorie byla v~minulosti úspěšně otestována a aplikována na řadu preventivních chování, jako jsou zdravé dietní návyky \cite{Hackman2014}, mytí rukou \cite{Hackman2014} nebo řízení pod vlivem alkoholu \cite{Moan2011}. V~souvislosti s~výzkumem compliance během pandemie covid-19 byla korelace faktorů postulovaných Teorií plánovaného chování nalezena například se sociálním distancováním u~hongkongských \cite{Yu2021} a bangladéšských respondentů \cite{Das2021}. 
 
-Tato teorie rozlišuje mezi intencí k~tomu, provést nějaké chování (například hlášení kontaktů při trasování) a chováním samotným. Intence je dále ovlivněna osobními postoji jednotlivce ke konkrétnímu chování, jeho subjektivními společenskými normami a pocitem kontroly nad chováním. 
-Vztah mezi intencí a chováním samotným je také ovlivněn reálnou kontrolou nad chováním \cite{Ajzen1985}. Interakce mezi faktory je vizualizovaná na obrázku \ref{fig:graph}. Osobní postoje, normy a pocit kontroly postulované Teorií plánovaného chování se formují na pozadí individuálních (např. osobnostní rysy, zkušenost), společenských (např. náboženství, kultura, výchova) a informačních vlivů (např. zprávy v~médiích). 
+Tato teorie rozlišuje mezi intencí k~tomu, provést nějaké chování (například hlášení kontaktů při trasování) a chováním samotným. Intence je dále ovlivněna osobními postoji jednotlivce ke konkrétnímu chování, jeho subjektivními spo\-le\-čen\-ský\-mi normami a pocitem kontroly nad chováním. 
+Vztah mezi intencí a chováním samotným je také ovlivněn reálnou kontrolou nad chováním \cite{Ajzen1985}. Interakce mezi faktory je vizualizovaná na obrázku \ref{fig:graph}. Osobní postoje, normy a pocit kontroly postulované Teorií plánovaného chování se formují na pozadí individuálních (např. osobnostní rysy, zkušenost), společenských (např. náboženství, kultura, vý\-cho\-va) a informačních vlivů (např. zprávy v~médiích). 
 
 \begin{figure}
 \begin{center}
@@ -124,17 +122,17 @@ Subjektivní normy jsou vytvářeny na základě informací o~tom, jak se chová
 
 Jednou z~cest, jak zvýšit compliance, tedy může být navození pocitu, že většina lidí opatření dodržuje. V~kontextu trasování se může otázka na počet rizikových kontaktů dát do vztahu k~datům z~průzkumů, např.: „Data z~České republiky ukazují, že aktuální průměr je 13 kontaktů za týden. Řekl/a byste, že jste se za stejnou dobu setkal/a s~menším, nebo větším počtem lidí?“ Mimo ovlivnění subjektivní normy může tento způsob fungovat také jako forma kotvení (v~anglickém překladu anchoring), kognitivního bias, při kterém máme tendenci vztahovat (kotvit) odpovědi na určitou informaci \cite{Tversky1974}.
 
-Také je potřeba brát v~potaz to, že jedinci si během rozhovoru s~KHS nemusí vzpomenout na všechny kontakty, na které by mohli. Zvláště když jsou při vybavování kontaktů instruováni k~použití fotek a čísel z~telefonu, který ale zároveň používají k~rozhovoru s~KHS. V~takových případech by mohlo pomoci zaslání přípravné SMS, v~níž by byl uveden a) čas telefonátu od KHS a b) seznam informací, na které se KHS bude ptát. To by utvořilo možnost se na telefonát náležitě připravit a zároveň urychlilo celý proces.
+Také je potřeba brát v~potaz to, že jedinci si během rozhovoru s~KHS nemusí vzpomenout na všechny kontakty, na které by mohli. Zvláště když jsou při vybavování kontaktů instruováni k~použití fotek a čísel z~telefonu, který ale zároveň používají k~rozhovoru s~KHS. V~takových případech by mohlo pomoci zaslání pří\-prav\-né SMS, v~níž by byl uveden a) čas telefonátu od KHS a b) seznam informací, na které se KHS bude ptát. To by utvořilo možnost se na telefonát náležitě připravit a zároveň urychlilo celý proces.
 
 Prostor pro šíření zastaralých informací a dezinformací bude ovlivněn také komunikační strategií ze strany autorit. Jasná komunikace aktuálního stavu pandemie a jednotlivých preventivních opatření bude tedy též hrát klíčovou roli v~míře compliance \cite{Hyland-Wood2021}. 
 
 \paragraph*{K výsledkům trasování zjištěných díky Životu v~pandemii.}
-Výsledky rozšířeného výzkumu o~trasování potvrdily trendy, na které poukázalo naše prvotní šetření. Nejsilnějším výsledkem výzkumu je, že 70 \% dotazovaných nikdy nepoužívalo aplikaci eRouška. Dle Českého statistického úřadu přitom používá chytrý telefon přes 70 \% Čechů \cite{Mana2020}. Zdá se tedy, že propagace aplikace nebyla dostatečná. To ukazují i data z~Chytré karantény: v~říjnu 2020 aplikaci používal pouze jeden milion lidí (tedy cca 10 \% obyvatel ČR) \cite{Fiser2020}. Větší propagaci by si zasloužila i možnost sebereportování přes webové stránky, polovina respondentů o~ní nevěděla a jen 23 \% respondentů ji využilo. Sebereportování přitom ulehčuje proces trasování oběma stranám. 
+Výsledky roz\-ší\-ře\-né\-ho výzkumu o~trasování potvrdily trendy, na které poukázalo naše prvotní šetření. Nejsilnějším výsledkem výzkumu je, že 70 \% dotazovaných nikdy nepoužívalo aplikaci eRouška. Dle Českého statistického úřadu přitom používá chytrý telefon přes 70 \% Čechů \cite{Mana2020}. Zdá se tedy, že propagace aplikace nebyla dostatečná. To ukazují i data z~Chytré karantény: v~říjnu 2020 aplikaci používal pouze jeden milion lidí (tedy cca 10 \% obyvatel ČR) \cite{Fiser2020}. Větší propagaci by si zasloužila i možnost sebereportování přes webové stránky, polovina respondentů o~ní nevěděla a jen 23 \% respondentů ji využilo. Sebereportování přitom ulehčuje proces trasování oběma stranám. 
 
 Zvláštní pozornost si zaslouží i interpretace dat spojených s~nehlášením rizikových kontaktů KHS. Dva nejčastější důvody, proč lidé kontakty nehlásí, jsou, že si lidé nevzpomněli na všechny své kontakty, případně si nepamatovali jejich jméno či kontaktní údaje. Přitom by právě tyto těžkosti šlo překonat využitím sebereportovacího protokolu -- jedinec by byl veden k~tomu, aby vybavování pomohl na základě svého diáře, fotek z~telefonu či komunikace s~přáteli a následně se může snáz pokusit potřebné informace doplnit. Tato data potvrzují přínos sebereportování.
 
 \subsection*{Poznámky k~nástrojům Sebereportování a eRouška.}
-Přes polovinu dotazovaných o~možnosti sebereportování vůbec nevědělo. Nízké využití této možnosti hlášení rizikových kontaktů potvrzují i statistiky krajských hygienických stanic. Např. podle reportu Ministerstva zdravotnictví ČR z~26. března využilo sebetrasování 10–15 \% pozitivních \cite{MinisterstvoZdravotnictviCR2021}. Možnost sebereportování má potenciál zkrátit rozhovor s~hygienickou stanicí, tudíž šetří čas oběma stranám. Navíc funkční sebereportování podporuje důvěru ve spolupráci s~veřejnou institucí, což občanům chybí. Podle našeho názoru by si proto webová aplikace zasloužila daleko více propagace, než se jí dostává. Pro ty, kteří jsou zvyklí vyřizovat záležitosti on-line, by se mělo jednat o~primární cestu trasování. 
+Přes polovinu dotazovaných o~možnosti sebereportování vůbec nevědělo. Nízké vy\-uži\-tí této možnosti hlášení rizikových kontaktů potvrzují i statistiky krajských hygienických stanic. Např. podle reportu Ministerstva zdravotnictví ČR z~26. března využilo sebetrasování 10–15 \% pozitivních \cite{MinisterstvoZdravotnictviCR2021}. Možnost sebereportování má potenciál zkrátit rozhovor s~hygienickou stanicí, tudíž šetří čas oběma stranám. Navíc funkční sebereportování podporuje důvěru ve spolupráci s~veřejnou institucí, což občanům chybí. Podle našeho názoru by si proto webová aplikace zasloužila daleko více propagace, než se jí dostává. Pro ty, kteří jsou zvyklí vyřizovat záležitosti on-line, by se mělo jednat o~primární cestu trasování. 
 V~době, kdy je epidemie ještě silná, může být mnoho výhrad vůči eRoušce oprávněných, ať už jde o~možnost falešně pozitivních hlášení (eRouška ohlási i kontakt, při kterém měly obě strany respirátor) nebo to, že hlášení eRoušky negeneruje automaticky žádanku na test. Ve stavu, kdy se budou vyskytovat pouze jednotky nakažených, však něco jako eRouška může nabýt na významu. Jejích varování bude velice málo, takže lidem nebude zatěžko jít se testovat, a státu nebude zatěžko v~oněch případech testování zdarma umožnit. 
 Většina občanů v~produktivním věku je zvyklá využívat v~komunikaci se státem elektronickou formu – například je u~nás přes milion zřízených datových schránek \cite{DatoveSchranky2021}. U~této skupiny se nabízí větší propagace uvedených elektronických nástrojů ke zvládání epidemie. U~dominantně starší skupiny obyvatel, kteří na elektronickou komunikaci se státem nejsou zvyklí, doporučujeme podporovat možné mezistupně v~komunikaci – pomocníka či mediátora, který starším občanům a občankám pomůže. Tuto roli mohou plnit nejen děti a vnoučata, ale i pojišťovny nebo komunitní skupiny. 
 
@@ -145,14 +143,14 @@ Třetí výzkum se zaměřoval na pochopení důvodů, kvůli nimž respondenti 
  
 \paragraph*{Výsledky.}
 V~kvalitativním šetření týkajícím se motivace k~očkování jsme se v~rozhovorech zaměřili na důvod preference seniorů očkovat se u~praktických lékařů. Odpovědi vykazovaly značnou míru konzistence a lze z~nich vysledovat několik jasných postojů a obav.
-V~odpovědích respondentů se opakovala větší obeznámenost praktického lékaře s~osobní i rodinnou anamnézou jedince. „Obvodní lékař zná dobře náš zdravotní stav, důvěřujeme mu ohledně případných komplikací po očkování, o~kterých se všude píše…“ Praktický lékař je seznámen se stavem jedince a konečnou odpovědnost za správné vyplnění formuláře a vyloučení kontraindikací před očkováním nenese jen očkovaný. 
+V~odpovědích respondentů se opakovala větší obeznámenost praktického lékaře s~osobní i rodinnou anamnézou jedince. „Obvodní lékař zná dobře náš zdravotní stav, důvěřujeme mu ohledně případných komplikací po očkování, o~kterých se všude píše…“ Praktický lékař je seznámen se stavem jedince a konečnou odpovědnost za správné vyplnění formuláře a vyloučení kontraindikací před očko\-vá\-ním nenese jen očkovaný. 
 Dalším odrazujícím faktorem je pro řadu lidí neznámé prostředí a organizační nároky spojené s~cestou na očkovací místo. „Svého doktora mám v~docházkové vzdálenosti, nemusím zbytečně cestovat MHD nebo obtěžovat své děti, aby mě dovezly.“ Při rozhodování je relevantní obava z~toho, že se jedinec na rušném místě nakazí: „Raději si počkám na očkování u~svého obvodního lékaře, protože se bojím, abych se v~nemocnici sama covidem nenakazila…“
-Od organizace k~očkování ve velkokapacitním místě pak seniory odrazují komplikace spojené s~telefonováním. „Nepamatuji si, na co beru léky, nechci kvůli tomu volat obvoďákovi a pak to vyplňovat na papíru k~očkování.“ Telefonické konzultace s~praktikem a odpovědnost za správné vyplnění všech formulářů ve velkokapacitním centru vnímají senioři jako problém. Jako další problém uvádějí senioři shlukování velkého množství lidí, na které si za doby pandemie dále odvykli. „Z nemocnice mám obavy, určitě tam bude hodně lidí. U~svého praktika to znám.“ Často navíc osoby k~praktikovi docházejí pravidelně pro léky či na kontrolu, a očkování by se tedy spojilo s~již naplánovanou kontrolou.
+Od organizace k~očko\-vá\-ní ve velkokapacitním místě pak seniory odrazují komplikace spojené s~telefonováním. „Nepamatuji si, na co beru léky, nechci kvůli tomu volat obvoďákovi a pak to vyplňovat na papíru k~očkování.“ Telefonické konzultace s~praktikem a odpovědnost za správné vyplnění všech formulářů ve velkokapacitním centru vnímají senioři jako problém. Jako další problém uvádějí senioři shlukování velkého množství lidí, na které si za doby pandemie dále odvykli. „Z nemocnice mám obavy, určitě tam bude hodně lidí. U~svého praktika to znám.“ Často navíc osoby k~praktikovi docházejí pravidelně pro léky či na kontrolu, a očkování by se tedy spojilo s~již naplánovanou kontrolou.
 
 \section*{Diskuse}
 
 \paragraph*{K výsledkům kvalitativního šetření k~očkování seniorů.}
-Z~výsledků našeho šetření vyplývá, že preference respondentů nechat se očkovat u~praktického lékaře byla ovlivněna především důvěrou a pocitem bezpečí. V~březnu/dubnu 2021 k~nám z~médií přicházely negativní zprávy o~možných zdravotních komplikacích spojených s~očkováním \cite{Svamberk2021,MinisterstvoZdravotnictviCR2021a}. Je samozřejmě důležité, aby byla veřejnost informovaná, ovšem zjednodušující výstupy vytržené z~kontextu vyvolávají emoce strachu a zejména u~seniorů snižují důvěru v~bezpečí očkování jako takového. Přitom čísla mluví jasně – rizika spojená s~očkováním jsou nesrovnatelně nižší než rizika spojená s~onemocněním \cite{Statniustavprokontroluleciv2021}. 
+Z~výsledků našeho šetření vyplývá, že preference respondentů nechat se očkovat u~praktického lékaře byla ovlivněna především důvěrou a pocitem bezpečí. V~březnu/dubnu 2021 k~nám z~médií přicházely negativní zprávy o~možných zdravotních komplikacích spojených s~očkováním \cite{Svamberk2021,MinisterstvoZdravotnictviCR2021a}. Je samozřejmě důležité, aby byla ve\-řej\-nost informovaná, ovšem zjednodušující výstupy vytržené z~kontextu vyvolávají emoce strachu a zejména u~seniorů snižují důvěru v~bezpečí očkování jako takového. Přitom čísla mluví jasně – rizika spojená s~očkováním jsou nesrovnatelně nižší než rizika spojená s~onemocněním \cite{Statniustavprokontroluleciv2021}. 
 To může ovlivnit jak osobní postoje seniorů vůči očkování, tak jejich subjektivní pocit kontroly nad tím, se k~očkování reálně dostavit. Praktický lékař pro seniora představuje větší záruku bezpečí než anonymní systém, který se potýká s~nedůvěrou a kritikou velké části společnosti. Pokud tedy praktický lékař osobně zavolá svému pacientovi, po zvážení jeho anamnézy ho pozve k~očkování a dá mu navíc brzký termín, výrazně to zvyšuje šanci na úspěšnou vakcinaci seniorů.
 Respondenti uváděli také jako jeden z~faktorů strach z~jízdy v~MHD, kde se potenciálně mohou nakazit. Tento strach může ovlivnit subjektivní pocit kontroly nad schopností na očkování reálně dorazit. Intervence zaměřená na snížení tohoto rizika tedy může také zvýšit šanci na vakcinaci. Například v~Německu se rozhodli podpořit seniory tím, že jim poskytují při cestě za očkováním taxi za cenu běžné jízdenky, navíc je chrání darovaným FFP2 respirátorem \cite{Kreijger2021}.
 
@@ -170,7 +168,7 @@ Ačkoli se tento článek zabýval compliance s~konkrétními preventivními opa
 
 \section*{Závěr}
 
-Naše psychologicky zaměřené zkoumání compliance v~průběhu pandemie covid-19 vneslo do popředí nevyužité příležitosti při trasování i očkování. Nevyužitou příležitostí při trasování zůstávají digitální nástroje trasování -- především sebereportování skrze webovou stránku a využívání e-Roušky pro rychlejší trasování. V~podpoře očkování se jako málo využívaní zprostředkovatelé v~rámci zdravotního systému jeví praktičtí lékaři, u~kterých deklarovala zájem se očkovat část dosud neočkovaných jedinců. Na základě výzkumu můžeme konstatovat, že hygienické stanice jsou vnímány věcně, profesionálně a telefonáty za účelem trasování nejsou pro respondenty stresující. 
+Naše psychologicky zaměřené zkoumání compliance v~průběhu pandemie covid-19 vneslo do popředí nevyužité příležitosti při trasování i očkování. Nevyužitou pří\-le\-ži\-tos\-tí při trasování zůstávají digitální nástroje trasování -- především sebereportování skrze webovou stránku a využívání e-Roušky pro rychlejší trasování. V~podpoře očkování se jako málo využívaní zprostředkovatelé v~rámci zdravotního systému jeví praktičtí lékaři, u~kterých deklarovala zájem se očkovat část dosud neočkovaných jedinců. Na základě výzkumu můžeme konstatovat, že hygienické stanice jsou vnímány věcně, profesionálně a telefonáty za účelem trasování nejsou pro respondenty stresující. 
 
 \section*{Poděkování}
 
